language/move-model/tests/sources/variables_err.exp
error:

    ┌── tests/sources/variables_err.move:20:20 ───
    │
 20 │     invariant pack x == 0;
    │                    ^ Unexpected 'x'
    ·
 20 │     invariant pack x == 0;
    │                    - Expected ';'
    │
